bk_ida/gccida/c0/combine_givs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7920:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7940:1: error: use of undeclared identifier 'induction_1'
induction_1 **giv_array; // [rsp+60h] [rbp-30h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7940:15: error: use of undeclared identifier 'giv_array'
induction_1 **giv_array; // [rsp+60h] [rbp-30h] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7941:1: error: use of undeclared identifier 'induction_1'
induction_1 *g2; // [rsp+68h] [rbp-28h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7941:14: error: use of undeclared identifier 'g2'
induction_1 *g2; // [rsp+68h] [rbp-28h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7942:1: error: use of undeclared identifier 'induction_1'
induction_1 *g1; // [rsp+70h] [rbp-20h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7942:14: error: use of undeclared identifier 'g1'
induction_1 *g1; // [rsp+70h] [rbp-20h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7951:7: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7951:23: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7951:27: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7951:32: error: use of undeclared identifier 'g1'
for ( g1 = bl_0->giv; g1; g1 = g1->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7953:23: error: use of undeclared identifier 'g1'
if ( ( ( *( ( _WORD *)g1 + 50) >> 2) & 1) == 0 ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7956:1: error: use of undeclared identifier 'giv_array'
giv_array = ( induction_1 **)( ( char *)&lifetime - ( ( 8LL * giv_count + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7956:29: error: expected expression
giv_array = ( induction_1 **)( ( char *)&lifetime - ( ( 8LL * giv_count + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7956:15: error: use of undeclared identifier 'induction_1'
giv_array = ( induction_1 **)( ( char *)&lifetime - ( ( 8LL * giv_count + 15) & 0xFFFFFFFFFFFFFFF0LL)); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7958:7: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7958:24: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7958:28: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/loop.c:7958:33: error: use of undeclared identifier 'g1'
for ( g1 = bl_0a->giv; g1; g1 = g1->next_iv ) 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/combine_givs/src/obj/loop.o] Error 1
